<resources>
    <string name="app_name">GeoApp</string>
    <string name="center_location">Center Location</string>
    <string name="change_base_map">Change Base Map</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorites">Add Favorites</string>
    <string name="streets">Streets</string>
    <string name="satellite">Satellite</string>
    <string name="outdoors">Outdoors</string>
    <string name="base_map">Base Map</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="save">Save</string>
    <string name="name">Add a name</string>
    <string name="point_type">Point Type</string>
    <string name="error_empty_name">Empty name</string>
    <string name="marker">Marker</string>
    <string name="point_name">Point Name</string>
    <string name="lat_0_0_lng_0_0">Lat: 0.0, Lng: 0.0</string>
    <string name="go_to">Go to</string>
    <string name="point_saved">Point saved successfully</string>
    <string name="enter_point_name">Please enter a point name</string>
    <string name="explore">Explore</string>
    <string name="no_favorite_points">No favorite points added</string>
    <string name="add_normal_point">Add normal point</string>
    <string name="add_alert_point">Add alert point</string>
    <string name="select_point_type">Select point type</string>
    <string name="choose_point_type">Choose point type</string>
    <string name="normal_point">Normal point</string>
    <string name="alert_point">Alert point</string>
    <string name="no_internet_connection">No internet connection</string>

</resources>