<androidx.core.widget.NestedScrollView    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marker"
            android:fontFamily="@font/helvetica"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/btnPointType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_type"
                    android:fontFamily="@font/helvetica"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btnFavorites"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_favorite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites"
                    android:fontFamily="@font/helvetica"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFavoritePoints"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/edtPointName"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:hint="@string/name"
            android:layout_margin="16dp"
            android:padding="8dp" />

        <Button
            android:id="@+id/btnSavePoint"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BtnAccept"
            android:text="@string/save"
            android:layout_margin="10dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>