<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

        <TextView
                android:id="@+id/txtPointName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/point_name"
                android:fontFamily="@font/helvetica" />

        <TextView
                android:id="@+id/txtCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/lat_0_0_lng_0_0" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/btnShowOnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/show_on_map" />

        <TextView
                android:id="@+id/txtShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to"
                android:fontFamily="@font/helvetica"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp" />
    </LinearLayout>
</LinearLayout>