<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

        <ImageView
                android:id="@+id/imgStreets"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_basemap_street"
                android:scaleType="centerCrop"
                android:contentDescription="@string/streets" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/streets"
                android:textAlignment="center"
                android:paddingTop="8dp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

        <ImageView
                android:id="@+id/imgSatellite"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_basemap_satellite"
                android:scaleType="centerCrop"
                android:contentDescription="@string/satellite" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite"
                android:textAlignment="center"
                android:paddingTop="8dp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

        <ImageView
                android:id="@+id/imgOutdoors"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_basemap_outdoor"
                android:scaleType="centerCrop"
                android:contentDescription="@string/outdoors" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outdoors"
                android:textAlignment="center"
                android:paddingTop="8dp" />
    </LinearLayout>

</LinearLayout>