<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@id/bottomToolbar"
            app:layout_constraintEnd_toEndOf="parent">

        <View
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_circle_white"
                android:clickable="false"
                android:focusable="false" />

        <ImageButton
                android:id="@+id/btnCenterLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/center_location"
                android:src="@drawable/ic_location"
                android:layout_gravity="center" />
    </FrameLayout>

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="150dp">

        <View
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_circle_white"
                android:clickable="false"
                android:focusable="false" />

        <ImageButton
                android:id="@+id/btnChangeBaseMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/change_base_map"
                android:src="@drawable/ic_basemap"
                android:layout_gravity="center" />
    </FrameLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/btnExplore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:id="@+id/iconExplore"
                    android:layout_height="40dp"
                    android:contentDescription="@string/explore"
                    android:src="@drawable/ic_location_marker_icon"
                    app:tint="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/explore"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnFavoritesPoints"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iconFavorite"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/favorites"
                    android:src="@drawable/ic_favorite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/favorites"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>